initrd: Add real scp(1)
scp(1) and ssh(1) are different tools, so the original "scp" alias
doesn't work actually.  Add real scp(1) now.

Meanwhile, alias "ssh" to "slogin" as the same as the base system.

Remove the symbol keep statement as it's no longer needed.

--- a/initrd/rescue.libcrypto/Makefile
+++ b/initrd/rescue.libcrypto/Makefile
@@ -22,11 +22,11 @@ CRUNCH_PROGS_usr.bin=	\
 	cpio		\
 	fetch		\
 	nc		\
+	scp		\
 	ssh		\
 	tar
 
-CRUNCH_ALIAS_ssh= scp
-CRUNCH_KEEP_ssh= roaming_write roaming_read add_recv_bytes
+CRUNCH_ALIAS_ssh= slogin
 
 # Programs from 'sbin'
 #
