Makefile.inc1: Print more variables on error
Print the .MAKE.MODE, PATH, MAKESYSPATH, MAKEOBJDIRPREFIX, DESTDIR,
SHELL, .SHELL, .MAKE.MAKEFILES, and .PATH variables on error.
(Based on FreeBSD: share/mk/{local,meta}.sys.mk)

--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -1213,13 +1213,22 @@ restoreworld-auto:
 MAKE_PRINT_VAR_ON_ERROR= \
 	.CURDIR \
 	.OBJDIR \
+	.TARGETS \
+	.ERROR_TARGET \
+	.MAKE.LEVEL \
+	.MAKE.MODE \
+	PATH \
 	LD_LIBRARY_PATH \
 	MACHINE_ARCH \
 	MACHINE \
 	MAKEFILE \
+	MAKESYSPATH \
+	MAKEOBJDIRPREFIX \
 	WORLD_ALTCOMPILER \
-	.TARGETS \
-	.ERROR_TARGET \
-	.MAKE.LEVEL
+	DESTDIR \
+	SHELL .SHELL
+.if ${.MAKE.LEVEL} > 0
+MAKE_PRINT_VAR_ON_ERROR+= .MAKE.MAKEFILES .PATH
+.endif
 
 .include <bsd.subdir.mk>
