diffutils: Reconfigure and revert some obsolete local changes.
Our wcwidth() is by now capable of handling UTF-8 so revert the
changes from d76863bd1dbf9c1e4c04a977e3a7271a23cdb718.

While here, remove two more files from libdiffutils' Makefile.

--- a/gnu/usr.bin/diff/libdiffutils/Makefile
+++ b/gnu/usr.bin/diff/libdiffutils/Makefile
@@ -80,9 +80,7 @@ SRCS=	allocator.c \
 	cmpbuf.c \
 	prepargs.c \
 	asnprintf.c \
-	dup2.c \
 	error.c \
-	fcntl.c \
 	fnmatch.c \
 	getopt.c \
 	getopt1.c \
@@ -92,8 +90,7 @@ SRCS=	allocator.c \
 	secure_getenv.c \
 	strerror.c \
 	strerror-override.c \
-	vasnprintf.c \
-	wcwidth.c
+	vasnprintf.c
 
 # sources that produces empty objects
 #SRCS+=	\
