--- a/usr.bin/locate/locate/locate.rc
+++ b/usr.bin/locate/locate/locate.rc
@@ -3,7 +3,7 @@
 #
 # $FreeBSD: head/usr.bin/locate/locate/locate.rc 290742 2015-11-13 06:16:12Z des $
 
-# temp directory
+# temporary directory
 #TMPDIR="/tmp"
 
 # the actual database
@@ -15,24 +15,22 @@
 # directories unwanted in output
 #PRUNEDIRS=".git"
 
-# filesystems allowed. Beware: a non-listed filesystem will be pruned
-# and if the SEARCHPATHS starts in such a filesystem locate will build
-# an empty database.
+# filesystems allowed
 #
-# the default list contains all local file systems that are not synthetic,
+# WARNING:
+# A non-listed filesystem will be pruned, and if the following SEARCHPATHS
+# starts in such a filesystem locate will build an empty database!
+#
+# The default list contains all local file systems that are not synthetic,
 # loopback mounts, or read-only, according to lsvfs.
 #
-# be careful if you add 'nfs' or other network file system types or file
-# systems that generally reside on slow or removable devices like cd9660
+# Be careful if you add 'nfs' or other network file system types or file
+# systems that generally reside on slow or removable devices like cd9660.
+#
 #FILESYSTEMS="ufs hammer hammer2"
 
 # directories to be searched to create the database
-#
-# default to be all mount points with the above allowed filesystems, thus
-# allowing the exclusion of the root (/) filesystem while other mounted
-# and allowed filesystems can still be indexed.
-#
 #SEARCHPATHS="/"
 
 # the find program and its options
-#FIND="find -x"
+#FIND="find"
