--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3423,10 +3423,11 @@ TO_REMOVE+=/usr/sbin/btxld
 TO_REMOVE+=/usr/share/man/man8/btxld.8.gz
 TO_REMOVE+=/usr/share/examples/meteor
 TO_REMOVE+=/etc/defaults/mkinitrd.conf
-TO_REMOVE+=/usr/share/man/man8/mkinitrd.8.gz
-TO_REMOVE+=/usr/share/man/man5/mkinitrd.conf.5.gz
 TO_REMOVE+=/sbin/mkinitrd
-TO_REMOVE+=/usr/share/initrd/
+TO_REMOVE+=/usr/share/examples/etc/defaults/mkinitrd.conf
+TO_REMOVE+=/usr/share/initrd
+TO_REMOVE+=/usr/share/man/man5/mkinitrd.conf.5.gz
+TO_REMOVE+=/usr/share/man/man8/mkinitrd.8.gz
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
