initrd: Handle ${DESTDIR} when building rescue tools
When building rescue tools for a target system (e.g., create release
build), use tools (e.g., crunchide, crunchgen, cc), headers and libraries
from the target root (${DESTDIR}).

NOTE:
GCC is more tolerant (e.g., doesn't warn about unused variables) to
system headers than user headers, so we have to use "-isystem <inc_dir>"
instead of "-I<dir>", but the former (option syntax) causes difficulty
for <bsd.dep.mk> to filter the options to call mkdep(1).  Therefore, we
use "--sysroot=${DESTDIR}" and it's simpler than specifying headers paths
with "-I<dir>" and library paths with "-L<dir>".

Meanwhile, improve the commands logic in Makefile, and set LC_ALL=C.

--- a/initrd/Makefile.inc
+++ b/initrd/Makefile.inc
@@ -2,10 +2,19 @@ NOMAN=
 NOSHARED=
 WARNS?=		6
 
-# Define Makefile variable RESCUE
+# Define RESCUE for make and compiler
 CRUNCH_BUILDOPTS+= -DRESCUE
-# Define compile-time RESCUE symbol when compiling components
-CRUNCH_BUILDOPTS+= CRUNCH_CFLAGS=-DRESCUE
+CRUNCH_CFLAGS+= -DRESCUE
+
+.if defined(DESTDIR) && ${DESTDIR} != "" && ${DESTDIR} != "/"
+CRUNCH_CFLAGS+= --sysroot=${DESTDIR}
+CRUNCHENV+= PATH=${DESTDIR}/sbin:${DESTDIR}/bin:${DESTDIR}/usr/sbin:${DESTDIR}/usr/bin
+_SHLIBDIRPREFIX= ${DESTDIR}
+.endif
+
+# Apply the same flags to link the crunched binary because crunchgen(1) does
+# not recognize ${CRUNCH_CFLAGS}.
+CRUNCH_LINKOPTS+= ${CRUNCH_CFLAGS}
 
 # Use soft links to create the crunched program links
 #CRUNCH_USE_SYMLINKS=
