condvar.9: Add MLINKS for recently added functions.

--- a/share/man/man9/Makefile
+++ b/share/man/man9/Makefile
@@ -382,6 +382,10 @@ MLINKS+=condvar.9 cv_broadcast.9 \
 	condvar.9 cv_broadcastpri.9 \
 	condvar.9 cv_destroy.9 \
 	condvar.9 cv_init.9 \
+	condvar.9 cv_mtx_timedwait.9 \
+	condvar.9 cv_mtx_timedwait_sig.9 \
+	condvar.9 cv_mtx_wait.9 \
+	condvar.9 cv_mtx_wait_sig.9 \
 	condvar.9 cv_signal.9 \
 	condvar.9 cv_timedwait.9 \
 	condvar.9 cv_timedwait_sig.9 \
