initrd: Add -lpthread for hammer2
The 'pthread' library was lost from commit
8692d13918892c3f474fc05d37f17fe125bb61bd when rebasing.

--- a/initrd/sbin.libcrypto/Makefile
+++ b/initrd/sbin.libcrypto/Makefile
@@ -44,6 +44,7 @@ CRUNCH_LIBS+= -lmd  # md5, ping6
 CRUNCH_LIBS+= -lpcap  # wpa_supplicant
 CRUNCH_LIBS+= -lprivate_ssl  # wpa_supplicant
 CRUNCH_LIBS+= -lprivate_crypto
+CRUNCH_LIBS+= -lpthread
 CRUNCH_LIBS+= ${PRIVATELIB_LDFLAGS}
 
 .include <bsd.crunchgen.mk>
