telnet(1): Disable PAM for the rescue version
This avoids several PAM-related libraries when crunching telnet, and
reduces the size by about 200 KB.

--- a/lib/libtelnet/Makefile
+++ b/lib/libtelnet/Makefile
@@ -12,4 +12,8 @@ WARNS?=		2
 CFLAGS+=	-DENCRYPTION -DAUTHENTICATION -DSRA
 CFLAGS+=	-I${.CURDIR}/../../crypto/libressl/include
 
+.if defined(RESCUE)
+CFLAGS+=	-DNOPAM
+.endif
+
 .include <bsd.lib.mk>
