--- a/initrd/rescue.libcrypto/Makefile
+++ b/initrd/rescue.libcrypto/Makefile
@@ -65,8 +65,7 @@ CRUNCH_LIBS+= -lfetch  # fetch
 CRUNCH_LIBS+= -larchive  # cpio, tar
 CRUNCH_LIBS+= -llzma  # cpio, tar
 CRUNCH_LIBS+= -lbz2  # cpio, tar
-CRUNCH_LIBS+= -lpam -lcrypt -lradius -ltacplus -lopie -lypclnt  # telnet
-CRUNCH_LIBS+= -lprivate_ncurses  # telnet
+CRUNCH_LIBS+= -lprivate_ncurses -lcrypt  # telnet
 CRUNCH_LIBS+= -lprivate_ssl  # fetch, wpa_supplicant
 CRUNCH_LIBS+= -lprivate_ssh  # ssh
 CRUNCH_LIBS+= -lprivate_crypto
