kernel/ena: Port the ena(4) driver to DragonFly.
This work is based on an initial (non-building) patch by swildner
and also contains work by dillon. Special thanks to Colin Percival
and sephe for their help and assistance.

The driver works but should still be considered experimental.

Useful dports are:

devel/awscli
net/bsdec2-image-upload
sysutils/ec2-scripts

--- a/sys/dev/virtual/amazon/ena/Makefile
+++ b/sys/dev/virtual/amazon/ena/Makefile
@@ -30,12 +30,10 @@
 # $FreeBSD: head/sys/modules/ena/Makefile 318647 2017-05-22 14:46:13Z zbb $
 #
 
-.PATH:	${SRCTOP}/sys/dev/ena \
-	${SRCTOP}/sys/contrib/ena-com
+.PATH:	${.CURDIR}/ena-com
 
 KMOD	= if_ena
 SRCS	= ena.c ena_com.c ena_eth_com.c ena_sysctl.c
 SRCS	+= device_if.h bus_if.h pci_if.h
-CFLAGS  += -I${SRCTOP}/sys/contrib
 
 .include <bsd.kmod.mk>
