--- a/sys/platform/pc64/Makefile.inc
+++ b/sys/platform/pc64/Makefile.inc
@@ -3,4 +3,4 @@
 
 DEV_SUPPORT=	acpica agp bridge crypto disk drm misc netif \
 		pccard powermng raid serial sound smbus video \
-		virtual/hyperv virtual/virtio virtual/vmware
+		virtual/amazon virtual/hyperv virtual/virtio virtual/vmware
