--- a/usr.sbin/mtree/Makefile
+++ b/usr.sbin/mtree/Makefile
@@ -1,24 +1,20 @@
-#	$NetBSD: Makefile,v 1.34 2013/02/03 19:15:16 christos Exp $
-#	from: @(#)Makefile	8.2 (Berkeley) 4/27/95
+#	From: @(#)Makefile	8.1 (Berkeley) 6/6/93
+# $FreeBSD: src/usr.sbin/mtree/Makefile,v 1.15.2.5 2001/09/24 15:44:22 ru Exp $
 
-.PATH: ${.CURDIR}/../../sbin/md5
 .PATH: ${.CURDIR}/../../usr.bin/cksum
+.PATH: ${.CURDIR}/../../sbin/md5
 
 PROG=	mtree
 MAN=	mtree.8
-SRCS=	compare.c crc.c create.c excludes.c misc.c mtree.c spec.c specspec.c \
-	verify.c getid.c only.c
+SRCS=	compare.c crc.c create.c excludes.c misc.c mtree.c spec.c verify.c
 
-SRCS+=	pack_dev.c stat_flags.c
+.if !defined(BOOTSTRAPPING)
 SRCS+=	sha1hl.c
-
-DPADD=  ${LIBMD} ${LIBCRYPTO} ${LIBUTIL}
-LDADD=  -lmd -lprivate_crypto -lutil
+CFLAGS+= -DUSE_MD5 -DUSE_SHA1 -DUSE_RMD160
+DPADD=  ${LIBMD} ${LIBCRYPTO}
+LDADD=  -lmd -lprivate_crypto
 LDFLAGS+=	${PRIVATELIB_LDFLAGS}
 CFLAGS+= 	-I${.CURDIR}/../../crypto/libressl/include
-
-CFLAGS+=-I${_SHLIBDIRPREFIX}/usr/include/priv -I${.CURDIR}/../../sbin/md5
-
-#CFLAGS+=-DDEBUG
+.endif
 
 .include <bsd.prog.mk>
