openpam: Sync OpenPAM modules a bit with FreeBSD.
Not much to see here, except some bugfixes. Oh, and ed25519 support
in pam_ssh.

--- a/lib/libpam/modules/pam_echo/Makefile
+++ b/lib/libpam/modules/pam_echo/Makefile
@@ -1,4 +1,4 @@
-# $FreeBSD: src/lib/libpam/modules/pam_echo/Makefile,v 1.2 2003/03/09 20:06:35 obrien Exp $
+# $FreeBSD: head/lib/libpam/modules/pam_echo/Makefile 112044 2003-03-09 20:06:38Z obrien $
 
 LIB=	pam_echo
 SRCS=	pam_echo.c
