--- a/lib/libpam/modules/pam_group/Makefile
+++ b/lib/libpam/modules/pam_group/Makefile
@@ -1,4 +1,4 @@
-# $FreeBSD: src/lib/libpam/modules/pam_group/Makefile,v 1.1 2003/02/06 14:27:48 des Exp $
+# $FreeBSD: head/lib/libpam/modules/pam_group/Makefile 110455 2003-02-06 14:27:48Z des $
 
 LIB=		pam_group
 SRCS=		pam_group.c
