--- a/lib/libpam/modules/pam_chroot/Makefile
+++ b/lib/libpam/modules/pam_chroot/Makefile
@@ -1,4 +1,4 @@
-# $FreeBSD: src/lib/libpam/modules/pam_chroot/Makefile,v 1.1 2003/03/30 22:58:23 des Exp $
+# $FreeBSD: head/lib/libpam/modules/pam_chroot/Makefile 112857 2003-03-30 22:58:23Z des $
 
 LIB=		pam_chroot
 SRCS=		pam_chroot.c
