--- a/lib/libpam/modules/pam_ftpusers/Makefile
+++ b/lib/libpam/modules/pam_ftpusers/Makefile
@@ -1,4 +1,4 @@
-# $FreeBSD: src/lib/libpam/modules/pam_ftpusers/Makefile,v 1.2 2003/03/09 20:06:35 obrien Exp $
+# $FreeBSD: head/lib/libpam/modules/pam_ftpusers/Makefile 112044 2003-03-09 20:06:38Z obrien $
 
 LIB=	pam_ftpusers
 SRCS=	pam_ftpusers.c
