--- a/lib/libpam/modules/pam_guest/Makefile
+++ b/lib/libpam/modules/pam_guest/Makefile
@@ -1,4 +1,4 @@
-# $FreeBSD: src/lib/libpam/modules/pam_guest/Makefile,v 1.1 2003/05/31 16:52:58 des Exp $
+# $FreeBSD: head/lib/libpam/modules/pam_guest/Makefile 115462 2003-05-31 16:52:58Z des $
 
 LIB=		pam_guest
 SRCS=		pam_guest.c
