etc/login.conf: Fix COPYRIGHT file path

--- a/etc/login.conf
+++ b/etc/login.conf
@@ -19,7 +19,7 @@
 
 default:\
 	:passwd_format=sha512:\
-	:copyright=/etc/COPYRIGHT:\
+	:copyright=/COPYRIGHT:\
 	:welcome=/etc/motd:\
 	:setenv=MAIL=/var/mail/$,BLOCKSIZE=K,FTP_PASSIVE_MODE=YES:\
 	:path=/sbin /bin /usr/sbin /usr/bin /usr/games /usr/local/sbin /usr/local/bin /usr/pkg/sbin /usr/pkg/bin ~/bin:\
