Move fpclassify.3 from libc to libm where it belongs.

--- a/lib/libc/gen/Makefile.inc
+++ b/lib/libc/gen/Makefile.inc
@@ -58,7 +58,7 @@ MAN+=	alarm.3 arc4random.3 clock.3 \
 	dladdr.3 dlinfo.3 dlopen.3 \
 	dlclose.3 dlerror.3 dlfcn.3 dlsym.3 dlvsym.3 dl_iterate_phdr.3 \
 	endutxent.3 err.3 exec.3 \
-	fmtcheck.3 fmtmsg.3 fnmatch.3 fpclassify.3 frexp.3 ftok.3 fts.3 ftw.3 \
+	fmtcheck.3 fmtmsg.3 fnmatch.3 frexp.3 ftok.3 fts.3 ftw.3 \
 	getbootfile.3 getbsize.3 getcap.3 getcontext.3 getcwd.3 \
 	getdevpath.3 getdiskbyname.3 getdisktabbyname.3 getdomainname.3 \
 	getfsent.3 getgrent.3 getgrouplist.3 \
