Build - for /rescue transition must make upgrade
* Must make upgrade before make rescue when transitioning to the new
  /rescue topology.

* Must ensure certain header files are not present.  make rescue
  currently improperly uses /usr/include which can have all sorts of
  cruft in it.

* This is a quick hack, will be fixed by a later cleanup of the
  make rescue target to properly split it into buildworld (to build)
  and installworld (to install).

--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -496,6 +496,10 @@ installworld: installcheck
 	# Do not leave an empty '/rescue' directory when switching the rescue
 	# tools from '/usr/share/initrd' to '/rescue'.
 	@echo "--------------------------------------------------------------"
+	@echo ">>> we have to run make upgrade to transition rescue tools"
+	@echo "--------------------------------------------------------------"
+	(cd ${.CURDIR} && make upgrade)
+	@echo "--------------------------------------------------------------"
 	@echo ">>> build and install rescue tools"
 	@echo "--------------------------------------------------------------"
 	(cd ${.CURDIR} && make rescue)
