--- a/share/zoneinfo/Makefile
+++ b/share/zoneinfo/Makefile
@@ -8,8 +8,9 @@ LEAPFILE=	-L leapseconds
 LEAPFILE=
 .endif
 
-TZFILES=	africa antarctica asia australasia etcetera europe \
-		northamerica southamerica systemv
+TZFILES=	africa antarctica asia australasia backzone \
+		etcetera factory europe northamerica \
+		pacificnew southamerica systemv
 TZFILES+=	dragonfly
 POSIXRULES=	America/New_York
 
