Revert "[zoneinfo] Add some missing zoneinfo files"
This reverts commit e6c3cf619df176c8ebd2391f8f731dfefbc48fcd.

We do not need those files and they were left out intentionally.

Also, adding them broke installworld because we would have needed
new directories in /usr/share/zoneinfo via mtree.

--- a/share/zoneinfo/Makefile
+++ b/share/zoneinfo/Makefile
@@ -8,9 +8,8 @@ LEAPFILE=	-L leapseconds
 LEAPFILE=
 .endif
 
-TZFILES=	africa antarctica asia australasia backzone \
-		etcetera factory europe northamerica \
-		pacificnew southamerica systemv
+TZFILES=	africa antarctica asia australasia etcetera europe \
+		northamerica southamerica systemv
 TZFILES+=	dragonfly
 POSIXRULES=	America/New_York
 
