drm: Use a dedicated .h file for configuration options
With-advice-from: swildner

--- a/sys/dev/drm/drm/Makefile
+++ b/sys/dev/drm/drm/Makefile
@@ -74,6 +74,6 @@ SRCS	= \
 SRCS   += device_if.h bus_if.h pci_if.h device_if.h iicbus_if.h opt_drm.h \
 	  opt_ktr.h opt_vm.h
 
-KCFLAGS+= -I${SYSDIR}/dev/drm/include
+KCFLAGS+= -I${SYSDIR}/dev/drm/include -include ${SYSDIR}/dev/drm/kconfig.h
 
 .include <bsd.kmod.mk>
