--- a/etc/newsyslog.conf
+++ b/etc/newsyslog.conf
@@ -32,7 +32,7 @@
 /var/log/wtmp				644  3	   *	@01T05 B
 /var/log/wtmpx				644  3     *    @01T05 B
 /var/log/daily.log			640  7	   *	@T00  ZN
-/var/log/weekly.log			640  5	   1	$W6D0 ZN
+/var/log/weekly.log			640  5	   *	$W6D0 ZN
 /var/log/monthly.log			640  12	   *	$M1D0 ZN
 /var/log/console.log			600  5	   100	*     Z
 
