--- a/usr.sbin/zic/zdump/Makefile
+++ b/usr.sbin/zic/zdump/Makefile
@@ -1,5 +1,4 @@
 # $FreeBSD: src/usr.sbin/zic/zdump/Makefile,v 1.4.2.1 2001/04/25 12:11:16 ru Exp $
-# $DragonFly: src/usr.sbin/zic/zdump/Makefile,v 1.2 2003/06/17 04:30:05 dillon Exp $
 
 .PATH:	${.CURDIR}/..
 
@@ -8,7 +7,6 @@ PROG=	zdump
 SRCS=	zdump.c ialloc.c scheck.c
 MAN=	${.CURDIR}/../zdump.8
 CFLAGS+= -I${.CURDIR}/.. -I${.CURDIR}/../../../lib/libc/stdtime
-CFLAGS+= -DTM_GMTOFF=tm_gmtoff -DTM_ZONE=tm_zone
-CFLAGS+= -DTZDIR=\"/usr/share/zoneinfo\" -Demkdir=mkdir
+CFLAGS+= -DTM_GMTOFF=tm_gmtoff
 
 .include <bsd.prog.mk>
