drm/linux: Implement more reservation objects code

--- a/sys/dev/drm/drm/Makefile
+++ b/sys/dev/drm/drm/Makefile
@@ -56,6 +56,7 @@ SRCS	= \
 	linux_irq.c \
 	linux_kobject.c \
 	linux_list_sort.c \
+	linux_reservation.c \
 	linux_scatterlist.c \
 	linux_shmem.c \
 	linux_sort.c \
