--- a/sys/net/pf/Makefile
+++ b/sys/net/pf/Makefile
@@ -1,9 +1,7 @@
-# $DragonFly: src/sys/net/pf/Makefile,v 1.3 2005/02/18 11:41:42 corecode Exp $
-
 KMOD=	pf
 SRCS=	if_pflog.c if_pfsync.c pf.c pf_if.c pf_ioctl.c pf_norm.c pf_osfp.c pf_subr.c
 SRCS+=	pf_table.c pf_ruleset.c
-SRCS+=	use_pflog.h use_pfsync.h opt_inet.h opt_inet6.h opt_carp.h
+SRCS+=	use_bpf.h use_pflog.h use_pfsync.h opt_inet.h opt_inet6.h opt_carp.h
 SRCS+=	opt_icmp_bandlim.h
 
 use_pflog.h:
@@ -18,6 +16,9 @@ opt_inet.h:
 
 opt_inet6.h:
 	echo "#define INET6 1" > ${.TARGET}
+
+use_bpf.h:
+	echo "#define NBPF 1" > ${.TARGET}
 
 .endif	# !BUILDING_WITH_KERNEL
 
