--- a/sys/dev/acpica/Makefile
+++ b/sys/dev/acpica/Makefile
@@ -44,7 +44,7 @@ SRCS+=	exconcat.c exconfig.c exconvrt.c excreate.c
 SRCS+=	exdump.c exfield.c exfldio.c exmisc.c exmutex.c
 SRCS+=	exnames.c exoparg1.c exoparg2.c exoparg3.c exoparg6.c
 SRCS+=	exprep.c exregion.c exresnte.c exresolv.c exresop.c
-SRCS+=	exstore.c exstoren.c exstorob.c exsystem.c
+SRCS+=	exserial.c exstore.c exstoren.c exstorob.c exsystem.c
 SRCS+=	extrace.c exutils.c exdebug.c
 SRCS+=	hwacpi.c hwesleep.c hwgpe.c hwregs.c hwsleep.c
 SRCS+=	hwtimer.c hwvalid.c hwxface.c hwpci.c hwxfsleep.c
