--- a/sys/dev/virtual/virtio/random/Makefile
+++ b/sys/dev/virtual/virtio/random/Makefile
@@ -25,7 +25,7 @@
 
 KMOD=	virtio_random
 SRCS=	virtio_random.c
-SRCS+=	virtio_bus_if.h virtio_if.h
+SRCS+=	virtio_bus_if.h
 SRCS+=	bus_if.h device_if.h
 
 .include <bsd.kmod.mk>
